--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/app.js ",
+    "start": "node src/app.js ",
     "swagger": "node src/swagger.js"
-
   },
   "repository": {
     "type": "git",
@@ -22,6 +21,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-routes": "^1.0.1",
+    "express-validation": "^3.0.8",
     "express-validator": "^6.12.1",
     "nodemon": "^2.0.12",
     "pg": "^8.7.1",
